# solana-circom

./: package-lock.json  package.json
src/program-rust/: Cargo.toml
src/program-rust/circuits/: proof.json  public.json  verification_key.json
src/program-rust/src/: circom.rs  lib.rs
