
[package]
name = "solana-bpf-helloworld"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "~1.8.14"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.59" }

# ZKP dependencies
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", rev = "765817f", default-features = false }
ark-bn254 = { version = "0.3.0", default-features = false, features = ["curve"] }

[dev-dependencies]
solana-program-test = "~1.8.14"
solana-sdk = "~1.8.14"
num-bigint = { version = "0.4.3", default-features = false, features = ["serde"] }

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
